style.css
html,
body {
  font-family: arial;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.searchResultDiv {
  width: 25vw;
  display: flex;
}
.resultsDiv {
  display: flex;
  flex-direction: wrap;
  align-items: flex-start;
}

header,
footer {
  width: 95vw;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border: 1px solid gainsboro;
  border-radius: 4px;
  letter-spacing: 2px;
  padding-left: 1rem;
}

#socialIcons {
  justify-items: center;
  width: 10vw;
  display: flex;
  justify-content: space-between;
}

svg {
  margin: 0 1rem 0 1rem;
}

#navigation {
  width: 50vw;
  text-align: right;
}

#navbar li,
#socialIcons li {
  display: inline;
  list-style-type: none;
  margin-right: 0.5rem;
  text-decoration: none;
}

#navbar {
  margin-right: 10%;
  margin-left: auto;
}

table {
  margin-right: 10px;
  margin-left: auto;
}

form {
  margin: 0 1rem 0 1rem;
}

header,
footer,
main {
  margin-top: 6px;
  margin-bottom: 6px;
  box-shadow: 0px 2px 5px 0px gainsboro;
}

